--- a/files/templates/files/index.html
+++ b/files/templates/files/index.html
@@ -2,10 +2,23 @@
 
 {% block content %}
 <style>
-    body{
+    body {
     line-height: 1.5;
     font-family: 'Poppins', sans-serif;
-}
+    margin: 0;
+    padding: 0;
+    height: 100vh; /* Make sure the body takes up the full height of the viewport */
+    display: flex;
+    flex-direction: column;
+  }
+  main {
+    flex: 1;
+  }
+  footer {
+    background-color: #24262b;
+    padding: 70px 0;
+    margin-top: auto; /* Push the footer to the bottom */
+  }
 *{
     margin:0;
     padding:0;
